SERVER-78021 Prevent deadlock caused by session checkout and _chunkOpLock locking ordering