src/mongo/db/s/config/configsvr_set_allow_migrations_command.cpp
@@ -40,15 +40,12 @@
 #include "mongo/db/auth/resource_pattern.h"
 #include "mongo/db/cluster_role.h"
 #include "mongo/db/commands.h"
-#include "mongo/db/database_name.h"
-#include "mongo/db/namespace_string.h"
-#include "mongo/db/operation_context.h"
-#include "mongo/db/repl/read_concern_args.h"
-#include "mongo/db/repl/read_concern_level.h"
+#include "mongo/db/dbdirectclient.h"
 #include "mongo/db/s/config/sharding_catalog_manager.h"
-#include "mongo/db/server_options.h"
-#include "mongo/db/service_context.h"
-#include "mongo/rpc/op_msg.h"
+#include "mongo/db/s/sharding_util.h"
+#include "mongo/db/transaction/transaction_participant.h"
+#include "mongo/db/transaction/transaction_participant_resource_yielder.h"
+#include "mongo/s/grid.h"
 #include "mongo/s/request_types/set_allow_migrations_gen.h"
 #include "mongo/util/assert_util.h"
 
@@ -57,6 +54,30 @@
 
 namespace mongo {
 namespace {
+
+void tellShardsToRefresh(OperationContext* opCtx,
+                         const NamespaceString& nss,
+                         const std::string& cmdName) {
+    // If we have a session checked out, we need to yield it, considering we'll be doing a network
+    // operation that may block.
+    std::unique_ptr<TransactionParticipantResourceYielder> resourceYielder;
+    if (TransactionParticipant::get(opCtx)) {
+        resourceYielder = TransactionParticipantResourceYielder::make(cmdName);
+        resourceYielder->yield(opCtx);
+    }
+
+    // Trigger a refresh on every shard. We send this to every shard and not just shards that own
+    // chunks for the collection because the set of shards owning chunks is updated before the
+    // critical section is released during chunk migrations. If the last chunk is moved off of a
+    // shard and this flush is not sent to that donor, stopMigrations will not wait for the critical
+    // section to finish on that shard (SERVER-73984).
+    const auto executor = Grid::get(opCtx)->getExecutorPool()->getFixedExecutor();
+    const auto allShardIds = Grid::get(opCtx)->shardRegistry()->getAllShardIds(opCtx);
+    sharding_util::tellShardsToRefreshCollection(opCtx, allShardIds, nss, executor);
+    if (resourceYielder) {
+        resourceYielder->unyield(opCtx);
+    }
+}
 
 class ConfigsvrSetAllowMigrationsCommand final
     : public TypedCommand<ConfigsvrSetAllowMigrationsCommand> {
@@ -78,20 +99,49 @@ public:
             CommandHelpers::uassertCommandRunWithMajority(Request::kCommandName,
                                                           opCtx->getWriteConcern());
 
-            // Set the operation context read concern level to local for reads into the config
-            // database.
-            repl::ReadConcernArgs::get(opCtx) =
-                repl::ReadConcernArgs(repl::ReadConcernLevel::kLocalReadConcern);
+            {
+                // Use ACR to have a thread holding the session while we do the metadata updates so
+                // we can serialize concurrent requests to setAllowMigrations (i.e. a stepdown
+                // happens and the new primary sends a setAllowMigrations with the same sessionId).
+                // We could think about weakening the serialization guarantee in the future because
+                // the replay protection comes from the oplog write with a specific txnNumber. Using
+                // ACR also prevents having deadlocks with the shutdown thread because the
+                // cancellation of the new operation context is linked to the parent one.
+                auto newClient = opCtx->getServiceContext()->makeClient("SetAllowMigrations");
+                AlternativeClientRegion acr(newClient);
+                auto executor =
+                    Grid::get(opCtx->getServiceContext())->getExecutorPool()->getFixedExecutor();
+                auto newOpCtxPtr = CancelableOperationContext(
+                    cc().makeOperationContext(), opCtx->getCancellationToken(), executor);
 
-            const auto allowMigrations = request().getAllowMigrations();
-            const auto& collectionUUID = request().getCollectionUUID();
+                AuthorizationSession::get(newOpCtxPtr.get()->getClient())
+                    ->grantInternalAuthorization(newOpCtxPtr.get()->getClient());
+                newOpCtxPtr->setWriteConcern(opCtx->getWriteConcern());
 
-            ShardingCatalogManager::get(opCtx)->setAllowMigrationsAndBumpOneChunk(
-                opCtx,
-                nss,
-                collectionUUID,
-                allowMigrations,
-                ConfigsvrSetAllowMigrations::kCommandName.toString());
+                // Set the operation context read concern level to local for reads into the config
+                // database.
+                repl::ReadConcernArgs::get(newOpCtxPtr.get()) =
+                    repl::ReadConcernArgs(repl::ReadConcernLevel::kLocalReadConcern);
+
+                const auto allowMigrations = request().getAllowMigrations();
+                const auto& collectionUUID = request().getCollectionUUID();
+
+                ShardingCatalogManager::get(newOpCtxPtr.get())
+                    ->setAllowMigrationsAndBumpOneChunk(
+                        newOpCtxPtr.get(), nss, collectionUUID, allowMigrations);
+            }
+
+            tellShardsToRefresh(opCtx, ns(), ConfigsvrSetAllowMigrations::kCommandName.toString());
+
+            // Since we no write happened on this txnNumber, we need to make a dummy write to
+            // protect against older requests with old txnNumbers.
+            DBDirectClient client(opCtx);
+            client.update(NamespaceString::kServerConfigurationNamespace,
+                          BSON("_id"
+                               << "SetAllowMigrationsStats"),
+                          BSON("$inc" << BSON("count" << 1)),
+                          true /* upsert */,
+                          false /* multi */);
         }
 
     private:
